Fix for collection icons overlap in Issue 1689

--- a/public/stylesheets/plain_text_skin.css
+++ b/public/stylesheets/plain_text_skin.css
@@ -17,7 +17,7 @@
 								{ background: none; }
  .collection .blurb .header, .blurb .mystery 
 								{ background: none; }
-.collection .blurb .header h4, .blurb .header h5, .blurb .header ul { margin: auto 6em auto 0; }
+.collection .blurb .header h4, .collection .blurb .header h5, .collection .blurb .header ul { margin: auto 6em auto 120px; }
 
 /*css3 non-critical perks*/
  .blurb ul.required-tags:before { content: "(";}
